[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
honeyos-fs = { path = "crates/honeyos-fs" }
honeyos-process = { path = "crates/honeyos-process" }
honeyos-display = { path = "crates/honeyos-display" }
honeyos-networking = { path = "crates/honeyos-networking" }
honeyos-bhai = { path = "crates/honeyos-bhai" }

console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "Node",
    "Window",
    "Navigator",
    "Location",
    "Clipboard",
    "KeyboardEvent",
    "Headers",
    "Blob",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "FileReader",
    "Performance",
] }
wasm_thread = { git = "https://github.com/adamgerhant/wasm_thread.git", rev = "b0ba16bfe310bab02f18be699926812d4489299a", features = [
    "es_modules",
] }
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["js", "v4"] }
